Add logout system and created_by field

--- a/keci/templates/keci_advanced_search.html
+++ b/keci/templates/keci_advanced_search.html
@@ -4,6 +4,7 @@
 {% endblock %}
 {% block content %}
 
-{% include 'simple_search_pagination.html' %}
+<h1>Yakında</h1>
+<p>Gelişmiş arama sayfası henüz yapım aşamasında, en kısa sürede açılacak.</p>
 
 {% endblock %}
