--- a/keci/templates/keci_search.html
+++ b/keci/templates/keci_search.html
@@ -9,7 +9,7 @@
 {% endblock %}
 {% block content %}
 <h1>Deneme</h1>
-<div class="content">
+<main class="content">
 
   <form method="GET" action="{% url 'keci_search' %}" aria-role="search">
     
@@ -188,5 +188,5 @@
     </li>
     {% endfor %}
   </ol>
-</div>
+</main>
 {% endblock %}
