--- a/keci/templates/registration/custom_password_reset_confirm.html
+++ b/keci/templates/registration/custom_password_reset_confirm.html
@@ -1,12 +1,12 @@
 {% extends "index.html" %}
 {% block title %}
-  <title>Password Change</title>
+  <title>Password Reset Confirm</title>
 {% endblock %}
 {% load crispy_forms_tags %}
 {% block content %}
 <form method="POST" class="registration-form">
     {% csrf_token %}
     {{ form|crispy }}
-    <button type="submit">Register</button>
+    <button type="submit">Reset</button>
 </form>
 {% endblock %}
