--- a/keci/templates/registration/custom_password_reset_done.html
+++ b/keci/templates/registration/custom_password_reset_done.html
@@ -4,5 +4,7 @@
 {% endblock %}
 
 {% block content %}
-<h1>done</h1>
+<h1>Check your inbox.</h1>
+<p>We've emailed you instructions for setting your password. You should receive the email shortly!</p>
+
 {% endblock %}
