--- a/keci/templates/registration/custom_password_reset_complete.html
+++ b/keci/templates/registration/custom_password_reset_complete.html
@@ -4,5 +4,13 @@
 {% endblock %}
 
 {% block content %}
-<p>Şifren değiştirildi</p>
+<div class="success-division">
+  <h4 class="success-heading">
+    Şifre sıfırlama işlemi başarılı!
+  </h4>
+  <p class="success-paragraph">
+    Şifren değiştirildi. <a href="{% url 'keci_home' %}">Anasayfaya</a>dönebilirsin.
+  </p>
+</div>
+
 {% endblock %}
