--- a/keci/templates/registration/custom_password_reset_done.html
+++ b/keci/templates/registration/custom_password_reset_done.html
@@ -4,7 +4,15 @@
 {% endblock %}
 
 {% block content %}
-<h1>Check your inbox.</h1>
-<p>We've emailed you instructions for setting your password. You should receive the email shortly!</p>
+<div class="success-division">
+  <h4 class="success-heading">
+    Check your inbox.
+  </h4>
+  <p class="success-paragraph">
+    We've emailed you instructions for setting your password.
+    <br> You should receive the email shortly! Return <a href="{% url 'keci_home' %}">homepage</a>. </br>
+  </p>
+</div>
+
 
 {% endblock %}
