--- a/keci/templates/registration/custom_password_change_done.html
+++ b/keci/templates/registration/custom_password_change_done.html
@@ -4,5 +4,13 @@
 {% endblock %}
 
 {% block content %}
+<div class="success-division">
+  <h4 class="success-heading">
+    Şifre değiştime işlemi başarılı!
+  </h4>
+  <p class="success-paragraph">
+    Şifren değiştirildi. <a href="{% url 'keci_home' %}">Anasayfaya</a>dönebilirsin.
+  </p>
+</div>
 
 {% endblock %}
