--- a/keci/templates/keci/help.html
+++ b/keci/templates/keci/help.html
@@ -3,32 +3,34 @@
   <title>Yardım</title>
 {% endblock %}
 {% block content %}
+<main class="help">
+  <h1>Keçi ile ilgili yardımcı olabilecek bilgiler</h1>
 
-<h1>Keçi ile ilgili yardımcı olabilecek bilgiler</h1>
+  <h2>Genel Bilgiler</h2>
+  <ul>
+    <li><a href="#">Keçi Hakkında</a></li>
+    <li><a href="#">Haklar</a></li>
+  </ul>
+  
+  <h2>Arama Yapmaya Dair</h2>
+  <ul>
+    <li><a href="#">Proje Bul</a></li>
+  </ul>
+  
+  <h2>Kullanıcı Hesapları</h2>
+  <ul>
+    <li><a href="#">Yeni Hesap Oluştur</a></li>
+    <li><a href="#">E-Mail Listesine Abone Ol</a></li>
+  </ul>
+  
+  <h2>Proje Yüklemek ve Katkıda Bulunmak</h2>
+  <ul>
+    <li><a href="#">Nasıl Proje Yükleyebilirim</a></li>
+    <li><a href="#">Nasıl Katkıda Bulunabilirim</a></li>
+  </ul>
+  
+  <p> Aradığınız cevabı bulamadıysanız lütfen <a href="#">Kullanıcı Destek ekibimiz ile iletişime geçin</a>. </p>
+</main>
 
-<h2>Genel Bilgiler</h2>
-<ul>
-  <li><a href="#">Keçi Hakkında</a></li>
-  <li><a href="#">Haklar</a></li>
-</ul>
-
-<h2>Arama Yapmaya Dair</h2>
-<ul>
-  <li><a href="#">Proje Bul</a></li>
-</ul>
-
-<h2>Kullanıcı Hesapları</h2>
-<ul>
-  <li><a href="#">Yeni Hesap Oluştur</a></li>
-  <li><a href="#">E-Mail Listesine Abone Ol</a></li>
-</ul>
-
-<h2>Proje Yüklemek ve Katkıda Bulunmak</h2>
-<ul>
-  <li><a href="#">Nasıl Proje Yükleyebilirim</a></li>
-  <li><a href="#">Nasıl Katkıda Bulunabilirim</a></li>
-</ul>
-
-<p> Aradığınız cevabı bulamadıysanız lütfen <a href="#">Kullanıcı Destek ekibimiz ile iletişime geçin</a>. </p>
 
 {% endblock %}
