--- a/keci/templates/keci/keci_advanced_search.html
+++ b/keci/templates/keci/keci_advanced_search.html
@@ -3,8 +3,11 @@
   <title>Gelişmiş Arama</title>
 {% endblock %}
 {% block content %}
+<main class="help">
+  <h1>Yakında Açılacak</h1>
+  <p style="margin-top: -24px; font-size: 18px; line-height: 36px;">Gelişmiş arama sayfası henüz yapım aşamasında olduğu için bu sayfayı görüyorsunuz.
+    <br> Gelişmiş arama özelliği en yakın zamanda hizmete sunulacak, buradan <a href="{% url 'keci_home' %}">anasayfaya</a> dönebilirsiniz.</br></p>
+</main>
 
-<h1>Yakında</h1>
-<p>Gelişmiş arama sayfası henüz yapım aşamasında, en kısa sürede açılacak.</p>
 
 {% endblock %}
