--- a/keci/templates/keci/help.html
+++ b/keci/templates/keci/help.html
@@ -1,6 +1,6 @@
-{% extends "index.html" %}
+{% extends "indexx.html" %}
 {% block title %}
-  <title>Yardım</title>
+Yardım
 {% endblock %}
 {% block content %}
 <main class="help">
