--- a/keci/templates/keci/keci_search.html
+++ b/keci/templates/keci/keci_search.html
@@ -15,17 +15,12 @@
     
 
     
-    <div class="field has-addons-tablet">
+    <div class="fieldd has-addons-tablet">
       <div class="control is-expanded">
-        <label for="query" class="hidden-label">Search term or terms</label>
-        
           <input class="input is-medium" id="query" name="query" placeholder="Search term..." type="text" value="{{ query_term }}">
-        
-        
       </div>
 
       <div class="select control is-medium">
-        <label class="is-hidden" for="searchtype">Field</label>
         <select class="is-medium" id="searchtype" name="searchtype">
           <option selected="" value="all">All fields</option>
           <option value="title">Title</option>
