Change the names of the pages

--- a/keci/templates/keci/help.html
+++ b/keci/templates/keci/help.html
@@ -1,7 +1,5 @@
-{% extends "indexx.html" %}
-{% block title %}
-Yardım
-{% endblock %}
+{% extends "index.html" %}
+{% block title %}Yardım{% endblock %}
 {% block content %}
 <main class="help">
   <h1>Keçi ile ilgili yardımcı olabilecek bilgiler</h1>
