--- a/keci/templates/keci/keci_home.html
+++ b/keci/templates/keci/keci_home.html
@@ -1,7 +1,5 @@
-{% extends "indexx.html" %}
-{% block title %}
-  <title>Keçi</title>
-{% endblock %}
+{% extends "index.html" %}
+{% block title %}Keçi{% endblock %}
 {% block content %}
 <h1>Yeni Proje İçin</h1>
 <a href="{% url 'new_project' %}">Buraya basarak gidebilirsiniz</a>
