--- a/keci/templates/index.html
+++ b/keci/templates/index.html
@@ -1,104 +1,61 @@
 <html>
     <head>
-      {% block title %}<title>Keçi</title>{% endblock %}
+      <title>{% block title %}Keçi{% endblock %}</title>
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="description" content="Keçi, ortak proje geliştirme platformu.">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       {% load static %}
-      <link rel="shortcut icon" href="{% static 'images/logo.png' %}">
-      <link rel="stylesheet" type="text/css" href="{% static 'css/keci.css' %}">
-       <!-- Latest compiled and minified CSS -->
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-      <!-- jQuery library -->
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-      <!-- Latest compiled JavaScript -->
-      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-      <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
-      <script>
-        MathJax = {
-          tex: {
-            inlineMath: [['$', '$'], ['\\(', '\\)']]
-          }
-        };
-      </script>
-      <script type="text/javascript" id="MathJax-script" async
-      src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js">
-    </script>
-      <script>
-        function myFunction() {
-        var x = document.getElementById("myTopnav");
-        if (x.className === "topnav") {
-          x.className += " responsive";
-        } else {
-          x.className = "topnav";
-        }
-      } 
-      </script>
-      {% block head-js %}
+      {% block head %}
       {% endblock %}
-      <style>
-        .form-inline {
-            display: grid;
-            grid-auto-flow: column;
-            float: right;
-            margin-right: 75px;
-            margin-top: -40px;
-            line-height: 0.5em;
-            font-size: 12px;
-            width: auto;
-        }
-        .btn {
-            background-color: #711111;
-            color: white;
-            border: none;
-            border-radius: 4px;
-            line-height: 6px;
-            font-size: 12px;
-            padding-left: 20px;
-            padding-right: 20px;
-            border-top-left-radius: 0px;
-            border-bottom-left-radius: 0px;
-        }
-        .btn:hover {
-            background-color: rgb(184, 88, 88);
-        }
-        .form-control, .field, .btn {
-            height: 27px;
-        }
-        .form-control {
-            border-top-right-radius: 0px;
-            border-bottom-right-radius: 0px;
-        }
-        #field {
-            border:0px;
-            outline:none;
-            width: 90px;
-        }
-      </style>
+      <link rel="shortcut icon" href="{% static 'images/logo.png' %}">
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+      <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
     </head>
-    <body>
-      <nav>
-        <div class="topnav" id="myTopnav">
-          <a href="{% url 'keci_home' %}" class="navbar-brand" id="logo"><img src="{% static 'images/logo-nav.png' %}" style="line-height: 24px; width: 24px; height: 24px;"></a> 
-          <a href="{% url 'keci_home' %}">Topluluk</a>
-          <a href="{% url 'keci_home' %}">Haberler</a>
-          <a href="{% url 'keci_home' %}">Dökümanlar</a>
-          <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+    <body class="d-flex flex-column min-vh-100">
+      <header class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="{% url 'keci_home' %}"><img src="{% static 'images/logo-nav.png' %}" style="width: 36px; height: 36px;"></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link" href="#">Topluluk</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Haberler</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Dökümanlar</a>
+              </li>
+            </ul>
+            <form class="d-flex input-group input-group-sm w-25" action="{% url 'keci_search' %}">
+              <input class="form-control w-25" type="search" placeholder="Arama terimleri" aria-label="Search" name="query">
+              <select name="field" id="field" class="form-select">
+                <option value="all-fields">All fields</option>
+                <option value="title">Title</option>
+                <option value="abstract">Abstract</option>
+                <option value="author">Author</option>
+              </select>
+              <button class="btn btn-red" type="submit">Ara</button>
+            </form>
+            <div class="d-md-none d-lg-block custom-nav-div" style="top: 38px; right: 400px; position: absolute;">
+              <p><a href="{% url 'help' %}">Help</a> | <a href="{% url 'keci_advanced_search' %}">Advanced Search</a></p>
+            </div>
+            <div class="d-lg-none custom-nav-div">
+              <p><a href="{% url 'help' %}">Help</a> | <a href="{% url 'keci_advanced_search' %}">Advanced Search</a></p>
+            </div>
+            <div id="login-div" style="float: right;">
+              <a id="id_login" href="{% url 'login' %}">Sign in</a> | <a id="id_register" href="{% url 'register' %}">Sign up</a>
+            </div>
+          </div>
         </div>
-        <form class="form-inline" action="{% url 'keci_search' %}">
-          <input class="form-control" type="search" placeholder="Arama terimleri" aria-label="Search" name="query">
-          <select name="field" id="field">
-            <option value="all-fields">All fields</option>
-            <option value="title">Title</option>
-            <option value="abstract">Abstract</option>
-            <option value="author">Author</option>
-          </select>
-          <button class="btn btn-outline-success" type="submit">Ara</button>
-        </form>
-        <a id="advanced_search" href="{% url 'keci_advanced_search' %}">Gelişmiş Arama</a>
-      </nav>
+      </header>
       {% block content %}
       {% endblock %}
+      {% include 'footer.html' %}
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
     </body>
 </html>
