--- a/keci/templates/keci/keci_advanced_search.html
+++ b/keci/templates/keci/keci_advanced_search.html
@@ -1,7 +1,5 @@
 {% extends "index.html" %}
-{% block title %}
-  <title>Gelişmiş Arama</title>
-{% endblock %}
+{% block title %}Gelişmiş Arama{% endblock %}
 {% block content %}
 <main class="help">
   <h1>Yakında Açılacak</h1>
