--- a/keci/templates/keci/new_project.html
+++ b/keci/templates/keci/new_project.html
@@ -1,7 +1,5 @@
 {% extends "index.html" %}
-{% block title %}
-  <title>Yeni Proje</title>
-{% endblock %}
+{% block title %}Yeni Proje{% endblock %}
 {% block head-js %}
 <script>
     window.onload = function formStyle() {
