--- a/keci/templates/keci/project.html
+++ b/keci/templates/keci/project.html
@@ -1,7 +1,5 @@
 {% extends "index.html" %}
-{% block title %}
-  <title>Proje ismi belki</title>
-{% endblock %}
+{% block title %}Project:{{project.title}} | Mürekkep ve Keçi{% endblock %}
 {% block content %}
 
 <h1>{{project.title}}</h1>
