Add registration links to navbar

--- a/accounts/templates/registration/custom_password_change_form.html
+++ b/accounts/templates/registration/custom_password_change_form.html
@@ -1,12 +1,10 @@
 {% extends "index.html" %}
-{% block title %}
-  <title>Password Change</title>
-{% endblock %}
+{% block title %}Password Change | Mürekkep ve Keçi{% endblock %}
 {% load crispy_forms_tags %}
 {% block content %}
 <form method="POST" class="registration-form">
     {% csrf_token %}
     {{ form|crispy }}
-    <button type="submit">Change</button>
+    <button class="btn btn-outline-primary" type="submit">Change</button>
 </form>
 {% endblock %}
