--- a/keci/templates/keci/help.html
+++ b/keci/templates/keci/help.html
@@ -1,5 +1,5 @@
 {% extends "index.html" %}
-{% block title %}Yardım{% endblock %}
+{% block title %}Help | Mürekkep ve Keçi{% endblock %}
 {% block content %}
 <main class="help">
   <h1>Keçi ile ilgili yardımcı olabilecek bilgiler</h1>
