--- a/keci/templates/keci/keci_search.html
+++ b/keci/templates/keci/keci_search.html
@@ -1,9 +1,7 @@
 {% extends "index.html" %}
 {% load static %}
 {% load custom_tags %}
-{% block title %}
-Search | Mürekkep ve Keçi
-{% endblock %}
+{% block title %}Search | Mürekkep ve Keçi{% endblock %}
 {% block content %}
 
 <main class="container">
