--- a/accounts/templates/registration/custom_password_change_done.html
+++ b/accounts/templates/registration/custom_password_change_done.html
@@ -1,7 +1,5 @@
 {% extends "index.html" %}
-{% block title %}
-  <title>Password Change Done</title>
-{% endblock %}
+{% block title %}Password Change Done | Mürekkep ve Keçi{% endblock %}
 
 {% block content %}
 <div class="success-division">
