--- a/accounts/templates/registration/custom_password_reset_complete.html
+++ b/accounts/templates/registration/custom_password_reset_complete.html
@@ -1,7 +1,5 @@
 {% extends "index.html" %}
-{% block title %}
-  <title>Password Reset Complete</title>
-{% endblock %}
+{% block title %}Password Reset Complete | Mürekkep ve Keçi{% endblock %}
 
 {% block content %}
 <div class="success-division">
