--- a/accounts/templates/registration/custom_password_reset_done.html
+++ b/accounts/templates/registration/custom_password_reset_done.html
@@ -1,7 +1,5 @@
 {% extends "index.html" %}
-{% block title %}
-  <title>Password Reset Done</title>
-{% endblock %}
+{% block title %}Password Reset Done | Mürekkep ve Keçi{% endblock %}
 
 {% block content %}
 <div class="success-division">
