--- a/accounts/templates/registration/login.html
+++ b/accounts/templates/registration/login.html
@@ -1,13 +1,11 @@
 {% extends "index.html" %}
-{% block title %}
-  <title>Login</title>
-{% endblock %}
+{% block title %}Login | Mürekkep ve Keçi{% endblock %}
 {% load crispy_forms_tags %}
 {% block content %}
 <form method="POST" class="registration-form">
     {% csrf_token %}
     {{ form|crispy }}
     <p>Don't have an account, create one <a href="{% url 'register' %}">here</a></p>
-    <button type="submit">Login</button>
+    <button class="btn btn-outline-primary" type="submit">Login</button>
 </form>
 {% endblock %}
