--- a/accounts/templates/registration/logout.html
+++ b/accounts/templates/registration/logout.html
@@ -1,7 +1,5 @@
 {% extends "index.html" %}
-{% block title %}
-  <title>Logout</title>
-{% endblock %}
+{% block title %}Logout | Mürekkep ve Keçi{% endblock %}
 
 {% block content %}
 <p>thx</p>
