--- a/accounts/templates/registration/password_reset.html
+++ b/accounts/templates/registration/password_reset.html
@@ -1,7 +1,5 @@
 {% extends "index.html" %}
-{% block title %}
-  <title>Password Reset</title>
-{% endblock %}
+{% block title %}Password Reset | Mürekkep ve Keçi{% endblock %}
 {% block head-js %}
 
 {% endblock %}
@@ -10,6 +8,6 @@
 <form method="POST" class="registration-form">
     {% csrf_token %}
     {{ form|crispy }}
-    <button type="submit">Reset</button>
+    <button class="btn btn-outline-primary" type="submit">Reset</button>
 </form>
 {% endblock %}
