--- a/keci/templates/keci/keci_advanced_search.html
+++ b/keci/templates/keci/keci_advanced_search.html
@@ -1,5 +1,5 @@
 {% extends "index.html" %}
-{% block title %}Gelişmiş Arama{% endblock %}
+{% block title %}Advanced Search | Mürekkep ve Keçi{% endblock %}
 {% block content %}
 <main class="help">
   <h1>Yakında Açılacak</h1>
