--- a/keci/templates/keci/keci_home.html
+++ b/keci/templates/keci/keci_home.html
@@ -1,5 +1,5 @@
 {% extends "index.html" %}
-{% block title %}Keçi{% endblock %}
+{% block title %}Keçi | Mürekkep ve Keçi{% endblock %}
 {% block content %}
 <h1>Yeni Proje İçin</h1>
 <a href="{% url 'new_project' %}">Buraya basarak gidebilirsiniz</a>
