--- a/keci/templates/keci/new_project.html
+++ b/keci/templates/keci/new_project.html
@@ -1,5 +1,5 @@
 {% extends "index.html" %}
-{% block title %}Yeni Proje{% endblock %}
+{% block title %}New Project | Mürekkep ve Keçi{% endblock %}
 {% block head-js %}
 <script>
     window.onload = function formStyle() {
