--- a/keci/templates/keci/keci_search.html
+++ b/keci/templates/keci/keci_search.html
@@ -52,8 +52,9 @@
     {% include 'pagination.html' %}
     <ol class="project-list breathe-horizontal" start="1">
         {% for project in projects %}
-        <li class="keci-result">
-          <div class="is-marginless">
+        {% search_hit request 'query' project.abstract 'Abstract' %}
+        <li class="keci-result lh-sm">
+          <div class="is-marginless m-0 p-0">
             <p class="list-title is-inline-block"><a href="{% url 'project' id=project.id %}">k-id:{{ project.id }}</a>
               <span>&nbsp;[<a href="{% url 'download_pdf' id=project.id %}">pdf</a>, <a href="{% url 'download_pdf' id=project.id %}">other</a>]&nbsp;</span>
             </p>
@@ -63,13 +64,15 @@
             
           </div>
           
-          <p class="title is-5 mathjax">
+          <p class="title is-5 mathjax my-1 py-1">
             
-            {{project.title}}
+            <strong> {{project.title}} </strong>
+            
             
           </p>
-          <p class="authors">
-            <span class="has-text-black-bis has-text-weight-semibold">Authors:</span>
+
+          <p class="authors my-1 py-1">
+            <strong>Authors:</strong>
             
             {% for author in project.authors.all %}
             {{ author.name }},
@@ -78,8 +81,8 @@
             
           </p>
           
-          <p class="abstract mathjax">
-            <span class="search-hit">Abstract</span>:
+          <p class="abstract mathjax my-1 py-1">
+            <span class="search-hit"><strong>Abstract:</strong></span>
             <span class="abstract-short has-text-grey-dark mathjax" id="{{ project.id }}-abstract-short" style="display: inline;">
               …Daha kısa abstract…
               <a class="is-size-7" style="white-space: nowrap;" onclick="document.getElementById('{{ project.id }}-abstract-full').style.display = 'inline'; document.getElementById('{{ project.id }}-abstract-short').style.display = 'none';">▽ More</a>
@@ -88,7 +91,7 @@
               {% with project.abstract|split:" " as words %}
                 {% for word in words %}
                   {% if word == query_term %}
-                  <span class="search-hit mathjax">{{ word }}</span>
+                  <span class="search-hit mathjax"><strong>{{ word }}</strong></span>
                   {% else %}
                     {{ word }}
                   {% endif %}
@@ -96,17 +99,18 @@
               {% endwith %}
               <a class="is-size-7" style="white-space: nowrap;" onclick="document.getElementById('{{ project.id }}-abstract-full').style.display = 'none'; document.getElementById('{{ project.id }}-abstract-short').style.display = 'inline';">△ Less</a>
             </span>
+            {% search_hit request 'query' project.abstract 'Abstract'%}
           </p>
           
-          <p class="stage"><span>Stage:</span> {{ project.current_stage.stages }}.
+          <p class="stage my-1 py-1"><strong>Stage:</strong> {{ project.current_stage.stages }}.
         
           </p>
         
-          <p class="language"><span>Language:</span> {{ project.language.languages }}.
+          <p class="language my-1 py-1"><strong>Language:</strong> {{ project.language.languages }}.
         
           </p>
         
-          <p class="branches"><span>Branches:</span>
+          <p class="branches my-1 py-1"><strong>Branches:</strong>
             {% for branch in project.branches.all %}
             {{ branch.branches }},
             {% endfor %}.
