Tweak search form select options

--- a/keci/templates/index.html
+++ b/keci/templates/index.html
@@ -37,7 +37,9 @@
                 <option value="all-fields">All fields</option>
                 <option value="title">Title</option>
                 <option value="abstract">Abstract</option>
-                <option value="author">Author</option>
+                <option value="author">Author(s)</option>
+                <option value="help">Help pages</option>
+                <option value="full_text">Full text</option>
               </select>
               <button class="btn btn-red" type="submit">Ara</button>
               <p id="search-form-label"><a href="{% url 'help' %}">Help</a>|<a href="{% url 'keci_advanced_search' %}">Advanced Search</a></p>
