--- a/keci/templates/index.html
+++ b/keci/templates/index.html
@@ -34,7 +34,7 @@
             <form id="form_id" class="d-flex input-group input-group-sm w-25 me-5" action="{% url 'keci_search' %}">
               <input class="form-control w-25" type="search" placeholder="Arama terimleri" aria-label="Search" name="query">
               <select name="field" id="field" class="form-select">
-                <option value="all-fields">All fields</option>
+                <option value="all">All fields</option>
                 <option value="title">Title</option>
                 <option value="abstract">Abstract</option>
                 <option value="author">Author(s)</option>
