--- a/keci/templates/search-hit.html
+++ b/keci/templates/search-hit.html
@@ -1,9 +1,6 @@
-<span class="{{search_result}}">{{field}}:</span>
-
-
-{% for word in words %}
-    {% if word == field_query %}
-        <span class="search-hit" id="{{field_id}}">{{ word }}</span>
+{% for word in text %}
+    {% if word == query_term %}
+        <span class="search-hit mathjax">{{ word }}</span>
     {% else %}
         {{ word }}
     {% endif %}
