--- a/keci/templates/index.html
+++ b/keci/templates/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
     <head>
       <title>{% block title %}Keçi{% endblock %}</title>
@@ -15,7 +16,7 @@
     <body class="d-flex flex-column min-vh-100">
       <header class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="{% url 'keci_home' %}"><img src="{% static 'images/logo-nav.png' %}" style="width: 36px; height: 36px;"></a>
+          <a class="navbar-brand" href="{% url 'keci_home' %}"><img src="{% static 'images/logo-nav.png' %}" alt="Logo" style="width: 36px; height: 36px;"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
