--- a/keci/templates/keci/keci_home.html
+++ b/keci/templates/keci/keci_home.html
@@ -11,6 +11,52 @@
 {% endfor %}
 {% endif %}
 
+<div class="js-repos-container" id="repos-container" data-pjax-container="">
+  <h2 class="f4 hide-sm hide-md mb-1 f5 d-flex flex-justify-between flex-items-center">
+    Repositories
+    <a class="btn btn-sm btn-primary color-text-white" data-hydro-click="{&quot;event_type&quot;:&quot;dashboard.click&quot;,&quot;payload&quot;:{&quot;event_context&quot;:&quot;REPOSITORIES&quot;,&quot;target&quot;:&quot;NEW_REPOSITORY_BUTTON&quot;,&quot;dashboard_context&quot;:&quot;user&quot;,&quot;dashboard_version&quot;:2,&quot;user_id&quot;:66683996,&quot;originating_url&quot;:&quot;https://github.com/dashboard/top_repositories?location=left&quot;}}" data-hydro-click-hmac="dd893a89c938d28f4eecf48a1ea0f21b46f0a5bcad37cae1497771a1382a288e" data-ga-click="Dashboard, click, Sidebar header new repo button - context:user" href="/new">
+      <svg aria-hidden="true" viewBox="0 0 16 16" version="1.1" data-view-component="true" height="16" width="16" class="octicon octicon-repo">
+  <path fill-rule="evenodd" d="M2 2.5A2.5 2.5 0 014.5 0h8.75a.75.75 0 01.75.75v12.5a.75.75 0 01-.75.75h-2.5a.75.75 0 110-1.5h1.75v-2h-8a1 1 0 00-.714 1.7.75.75 0 01-1.072 1.05A2.495 2.495 0 012 11.5v-9zm10.5-1V9h-8c-.356 0-.694.074-1 .208V2.5a1 1 0 011-1h8zM5 12.25v3.25a.25.25 0 00.4.2l1.45-1.087a.25.25 0 01.3 0L8.6 15.7a.25.25 0 00.4-.2v-3.25a.25.25 0 00-.25-.25h-3.5a.25.25 0 00-.25.25z"></path>
+</svg> New
+</a>    </h2>
+
+  <div class="mt-2 mb-3" role="search" aria-label="Repositories">
+    <input type="text" class="form-control input-contrast input-block mb-3 js-filterable-field js-your-repositories-search" id="dashboard-repos-filter-left" placeholder="Find a repository…" aria-label="Find a repository…" data-url="/" data-query-name="q" value="" autocomplete="off">
+  </div>
+  
+<ul class="list-style-none" data-filterable-for="dashboard-repos-filter-left" data-filterable-type="substring">
+  <li class="public source no-description">
+    <div class="width-full text-bold">
+      <a href="/dakyol/keci" class="d-inline-flex flex-items-baseline flex-wrap f5 mb-2 dashboard-underlined-link width-fit" data-hydro-click="{&quot;event_type&quot;:&quot;dashboard.click&quot;,&quot;payload&quot;:{&quot;event_context&quot;:&quot;REPOSITORIES&quot;,&quot;target&quot;:&quot;REPOSITORY&quot;,&quot;record_id&quot;:364902503,&quot;dashboard_context&quot;:&quot;user&quot;,&quot;dashboard_version&quot;:2,&quot;user_id&quot;:66683996,&quot;originating_url&quot;:&quot;https://github.com/dashboard/top_repositories?location=left&quot;}}" data-hydro-click-hmac="cb81d22204bb728c9acb602261791f87bee7c921f959f20d0f124dfa8d17095e" data-ga-click="Dashboard, click, Repo list item click - context:user visibility:public fork:false" data-hovercard-type="repository" data-hovercard-url="/dakyol/keci/hovercard">
+        <div class="color-text-tertiary mr-2">
+              <svg aria-label="Repository" role="img" viewBox="0 0 16 16" version="1.1" data-view-component="true" height="16" width="16" class="octicon octicon-repo flex-shrink-0">
+  <path fill-rule="evenodd" d="M2 2.5A2.5 2.5 0 014.5 0h8.75a.75.75 0 01.75.75v12.5a.75.75 0 01-.75.75h-2.5a.75.75 0 110-1.5h1.75v-2h-8a1 1 0 00-.714 1.7.75.75 0 01-1.072 1.05A2.495 2.495 0 012 11.5v-9zm10.5-1V9h-8c-.356 0-.694.074-1 .208V2.5a1 1 0 011-1h8zM5 12.25v3.25a.25.25 0 00.4.2l1.45-1.087a.25.25 0 01.3 0L8.6 15.7a.25.25 0 00.4-.2v-3.25a.25.25 0 00-.25-.25h-3.5a.25.25 0 00-.25.25z"></path>
+</svg>
+        </div>
+
+        <span class="flex-shrink-0 css-truncate css-truncate-target" title="dakyol">dakyol</span>/<span class="css-truncate css-truncate-target" style="max-width: 260px" title="keci">keci</span>
+
+      </a>
+    </div>
+  </li>
+  <li class="public source ">
+    <div class="width-full text-bold">
+      <a href="/dakyol/BezoarIbex" class="d-inline-flex flex-items-baseline flex-wrap f5 mb-2 dashboard-underlined-link width-fit" data-hydro-click="{&quot;event_type&quot;:&quot;dashboard.click&quot;,&quot;payload&quot;:{&quot;event_context&quot;:&quot;REPOSITORIES&quot;,&quot;target&quot;:&quot;REPOSITORY&quot;,&quot;record_id&quot;:371657658,&quot;dashboard_context&quot;:&quot;user&quot;,&quot;dashboard_version&quot;:2,&quot;user_id&quot;:66683996,&quot;originating_url&quot;:&quot;https://github.com/dashboard/top_repositories?location=left&quot;}}" data-hydro-click-hmac="6ed2bb2c2a35f2dd61bfdad16d601d1046bf51e47c8d47f749bcb1d2435597a2" data-ga-click="Dashboard, click, Repo list item click - context:user visibility:public fork:false" data-hovercard-type="repository" data-hovercard-url="/dakyol/BezoarIbex/hovercard">
+        <div class="color-text-tertiary mr-2">
+              <svg aria-label="Repository" role="img" viewBox="0 0 16 16" version="1.1" data-view-component="true" height="16" width="16" class="octicon octicon-repo flex-shrink-0">
+  <path fill-rule="evenodd" d="M2 2.5A2.5 2.5 0 014.5 0h8.75a.75.75 0 01.75.75v12.5a.75.75 0 01-.75.75h-2.5a.75.75 0 110-1.5h1.75v-2h-8a1 1 0 00-.714 1.7.75.75 0 01-1.072 1.05A2.495 2.495 0 012 11.5v-9zm10.5-1V9h-8c-.356 0-.694.074-1 .208V2.5a1 1 0 011-1h8zM5 12.25v3.25a.25.25 0 00.4.2l1.45-1.087a.25.25 0 01.3 0L8.6 15.7a.25.25 0 00.4-.2v-3.25a.25.25 0 00-.25-.25h-3.5a.25.25 0 00-.25.25z"></path>
+</svg>
+        </div>
+
+        <span class="flex-shrink-0 css-truncate css-truncate-target" title="dakyol">dakyol</span>/<span class="css-truncate css-truncate-target" style="max-width: 260px" title="BezoarIbex">BezoarIbex</span>
+
+      </a>
+    </div>
+  </li>
+</ul>
+
+
+</div>
 
 {% endblock %}
 
