--- a/keci/templates/keci/project.html
+++ b/keci/templates/keci/project.html
@@ -38,6 +38,6 @@ k-id:{{ project.id }}
   \[x = {-b \pm \sqrt{b^2-4ac} \over 2a}.\]
 </p>
 
-<a href="{% url 'download_pdf' id='ec78bc1c-0202-4445-a48f-b154c4ceeaa8' %}">sdsd</a>
+<a href="{% url 'download_pdf' id=project.id %}">sdsd</a>
 
 {% endblock %}
