Change settings file

--- a/keci/templates/index.html
+++ b/keci/templates/index.html
@@ -26,10 +26,16 @@
                 <a class="nav-link" href="#">Topluluk</a>
               </li>
               <li class="nav-item">
+                <a class="nav-link" href="#">İletişim</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Hakkında</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" href="#">Haberler</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Dökümanlar</a>
+                <a class="nav-link" href="#">Döküman</a>
               </li>
             </ul>
             <form id="form_id" class="d-flex input-group input-group-sm w-25 me-5" action="{% url 'keci_search' %}">
